Fixed getting started card text overflow bug.

--- a/src/app/components/docs/getting-started/getting-started.component.scss
+++ b/src/app/components/docs/getting-started/getting-started.component.scss
@@ -46,7 +46,7 @@
 
 .getting-started-card {
   overflow: auto;
-  width: 110%;
+  width: 100%;
   padding: 9px;
 }
 
